Quick fix to make the checkboxes visible when unchecked

--- a/packages/dapp/assets/scss/main.scss
+++ b/packages/dapp/assets/scss/main.scss
@@ -2012,6 +2012,7 @@ input[type=checkbox] {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+    border: 1px solid gray;
 }
 
 input[type=checkbox]:checked {
